# advpt_starcraft

./: .gitignore  README.md  contributors.txt
doc/: swe.dia
src/: Ability.cpp  Ability.h  Action.cpp  Action.h  CMakeLists.txt  EntityBP.cpp  EntityBP.h  EntityInst.cpp  EntityInst.h  Helper.cpp  Helper.h  Main.cpp  Resources.cpp  Resources.h  State.cpp  State.h  build.sh  dot.sh  forwardSim.sh  optimize.sh  submit.sh  techtree.csv
